# address-validator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: openapi.yaml
src/address_validation/: authorizer.py  client.py  exceptions.py  handler.py  health.py  models.py  parser.py  secrets.py
terraform/: alarms.tf  api_gateway.tf  authorizer.tf  authorizer_route.tf  dlq.tf  iam.tf  lambda.tf  main.tf  outputs.tf  secrets.tf  variables.tf
tests/: test_authorizer.py  test_client.py  test_handler.py  test_health.py  test_models.py  test_parser.py
tests/fixtures/: google_responses.py
