[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "address-validation-service"
version = "0.1.0"
description = "AWS Lambda service for address validation via Google Maps API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Matt Rundo" }]
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "respx>=0.22,<1",
    "mypy>=1.14,<2",
    "ruff>=0.9,<1",
    "pre-commit>=4,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/address_validation"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["address_validation"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"
